crates/es-fluent-derive/tests/ui/bad_selector_field.stderr
error[E0599]: no method named `as_fluent_choice` found for struct `NotChoice` in the current scope
  --> tests/ui/bad_selector_field.rs:10:5
   |
 5 | struct NotChoice;
   | ---------------- method `as_fluent_choice` not found for this struct
...
10 |     value: NotChoice,
   |     ^^^^^ method not found in `NotChoice`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `as_fluent_choice`, perhaps you need to implement it:
           candidate #1: `EsFluentChoice`
